<resources>
    <string name="app_name">Bop</string>
    <string name="title_activity_main">MY MUSIC</string>
    <string name="search">Search</string>
    <string name="title_activity_songs">Songs</string>
    <string name="title_activity_artists">Artists</string>
    <string name="title_activity_albums">Albums</string>
    <string name="title_fragment_settings">SETTINGS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Segoe MDL2 -->
    <string name="icon_play">&#xEE4A;</string>
    <string name="icon_pause">&#xE769;</string>
    <string name="icon_next">&#xE893;</string>
    <string name="icon_prev">&#xE892;</string>
    <string name="icon_more">&#xE712;</string>
    <string name="icon_hamburger">&#xE700;</string>
    <string name="icon_shuffle">&#xE8B1;</string>
    <string name="icon_repeat">&#xE895;</string>
    <string name="icon_up_arrow">&#xE971;</string>
    <string name="icon_recent">&#xE823;</string>
    <string name="icon_my_music">&#xE8D6;</string>
    <string name="menuHome">My Music</string>
    <string name="menuRecent">Recent Plays</string>
    <string name="menuPlaylist">Playlists</string>
    <string name="menuSettings">Settings</string>
    <string name="find_music">Music on this device</string>
    <string name="find_music_description">Choose where we look for music</string>
    <string name="audio_fx">Playback</string>
    <string name="equalizer">Equalizer</string>
    <string name="media_info">Media Info</string>
    <string name="media_retriever_description">Automatically retrieve and update missing album art and metadata</string>
    <string name="display_artist_art">Display artist art</string>
    <string name="art_as_lockscreen_description">Set the Now Playing artist art as my lock screen</string>
    <string name="app">App</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="sign_in_help">Need to sign in?</string>
    <string name="art_as_wallpaper_description">Set the Now Playing artist art as my wallpaper</string>
</resources>