<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/find_music">
        <Preference
            android:key="pref_key_push"
            android:layout="@layout/custom_preference"
            android:title="@string/find_music_description" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/audio_fx">
        <Preference
            android:key="pref_key_push"
            android:layout="@layout/custom_preference"
            android:title="@string/equalizer" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/media_info">
        <SwitchPreferenceCompat
            android:key="pref_key_push"
            android:layout="@layout/custom_switch_preference"
            android:title="@string/media_retriever_description" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/display_artist_art">
        <SwitchPreferenceCompat
            android:key="pref_key_push"
            android:layout="@layout/custom_switch_preference"
            android:title="@string/art_as_lockscreen_description" />
        <SwitchPreferenceCompat
            android:key="pref_key_push"
            android:layout="@layout/custom_switch_preference"
            android:title="@string/art_as_wallpaper_description" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/app">
        <Preference
            android:key="pref_key_push"
            android:layout="@layout/custom_preference"
            android:title="@string/help" />
        <Preference
            android:key="pref_key_push"
            android:layout="@layout/custom_preference"
            android:title="@string/feedback" />
        <Preference
            android:key="pref_key_push"
            android:layout="@layout/custom_preference"
            android:title="@string/about" />
        <Preference
            android:key="pref_key_push"
            android:layout="@layout/custom_preference"
            android:title="@string/sign_in_help" />
    </PreferenceCategory>

</PreferenceScreen>