<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_fluent_music_note_2_20_selector"
            android:title="@string/menuHome" />
        <item
            android:id="@+id/menuRecent"
            android:icon="@drawable/ic_fluent_clock_20_selector"
            android:title="@string/menuRecent" />
        <item
            android:id="@+id/menuNow"
            android:icon="@drawable/ic_fluent_poll_20_selector"
            android:title="@string/menuNow" />
        <item
            android:id="@+id/menuPlaylist"
            android:icon="@drawable/ic_fluent_text_first_line_20_selector"
            android:title="@string/menuPlaylist" />

        <item
            android:id="@+id/menuSettings"
            android:icon="@drawable/ic_fluent_settings_20_selector"
            android:title="@string/menuSettings" />

    </group>
</menu>