<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentNowPlaying"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".tabs.NowPlayingFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/blurImgCoverArt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_no_art"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgCoverArt"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:background="@color/transparent"
        android:elevation="2dp"
        android:src="@drawable/ic_no_art"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:shapeAppearance="?attr/shapeAppearanceSmallComponent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ContainerMiniPlayer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="top"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainSongInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:contextClickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvSongName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingBottom="14dp"
                android:singleLine="true"
                android:text="@string/title_activity_songs"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvArtistName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingBottom="14dp"
                android:singleLine="true"
                android:text="@string/title_activity_artists"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSongName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.msc24x.player.IconTextView
            android:id="@+id/iconPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_play"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="@+id/btnOutline"
            app:layout_constraintEnd_toEndOf="@+id/btnOutline"
            app:layout_constraintStart_toStartOf="@+id/btnOutline"
            app:layout_constraintTop_toTopOf="@+id/btnOutline" />

        <com.msc24x.player.IconTextView
            android:id="@+id/iconPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_pause"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/text"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btnOutline"
            app:layout_constraintEnd_toEndOf="@+id/btnOutline"
            app:layout_constraintStart_toStartOf="@+id/btnOutline"
            app:layout_constraintTop_toTopOf="@+id/btnOutline" />

        <com.msc24x.player.IconTextView
            android:id="@+id/iconNext"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="14dp"
            android:background="?android:actionBarItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/icon_next"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/text"
            app:layout_constraintStart_toEndOf="@id/btnOutline"
            app:layout_constraintTop_toBottomOf="@id/seekbar" />

        <com.msc24x.player.IconTextView
            android:id="@+id/iconPrev"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="14dp"
            android:background="?android:actionBarItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/icon_prev"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekbar" />

        <com.msc24x.player.IconTextView
            android:id="@+id/iconMore"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="14dp"
            android:background="?android:actionBarItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:rotation="90"
            android:text="@string/icon_more"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text"
            app:layout_constraintStart_toEndOf="@+id/iconNext"
            app:layout_constraintTop_toBottomOf="@id/seekbar" />

        <ImageButton
            android:id="@+id/btnOutline"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="14dp"
            android:alpha="0.2"
            android:background="?android:actionBarItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_outline"
            android:tint="@color/text"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/iconPrev"
            app:layout_constraintTop_toBottomOf="@id/seekbar"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTimeCode"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:paddingBottom="2sp"
            android:singleLine="true"
            android:textColor="@color/text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainSongInfo" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:progressDrawable="@drawable/progress"
            android:progressTint="@color/text"
            android:thumb="@drawable/thumb_progress"
            app:layout_constraintEnd_toStartOf="@id/tvTrackLength"
            app:layout_constraintStart_toEndOf="@id/tvTimeCode"
            app:layout_constraintTop_toBottomOf="@id/mainSongInfo" />

        <TextView
            android:id="@+id/tvTrackLength"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:paddingBottom="2sp"
            android:singleLine="true"
            android:textColor="@color/text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainSongInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.msc24x.player.IconTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:text="@string/icon_up_arrow"
        app:layout_constraintBottom_toBottomOf="@id/ContainerMiniPlayer" />


</androidx.constraintlayout.widget.ConstraintLayout>